# ImaginaryPlayer

./: CMakeLists.txt  README.md
data/: example.playlist  test.playlist  track_01.music  track_02.music
include/: Codec.h  Help.h  Shell.h  Track.h  Utils.h  Version.h
src/: CMakeLists.txt  Codec.cpp  HelpMessages.cpp  MusicPlayer.cpp  Shell.cpp  Track.cpp  Utils.cpp
